--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <header>
   <div class="colorful-heading"><img src="./eisenhower-matrix.jpg"><a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></div>
 </header>
+<main>
 <div class="centered-main-page-element"><p id="add-item"><label for="new-task">Add Item</label><div class="task-row-wrapper"><input id="new-task"class="task" type="text"><button>Add</button></div>
 </p><h3>Todo</h3>
 <ul id="incomplete-tasks">
@@ -16,6 +17,7 @@
 </li>
 </ul>
 </div>
+</main>
 <script src="app.js"></script>
 </body>
 </html>
