--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="centered-main-page-element">
       <p id="add-item">
           <label for="new-task">Add Item</label>
-          <div class="task-row-wrapper"><input id="new-task"class="task" type="text"><button>Add</button>
+          <div class="task-row-wrapper">
+            <input id="new-task"class="task" type="text"><button>Add</button>
           </div>
       </p>
       <h3>Todo</h3>
