--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
           <input type="text" class="task"><button class="edit">Edit</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
-        <li class="edit-mode"><input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class="edit">Save</button><button class="delete"><img src="./remove.svg"></button></li>
+        <li class="edit-mode">
+          <input type="checkbox"><label class="task">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task">
+          <button class="edit">Save</button>
+          <button class="delete"><img src="./remove.svg"></button>
+        </li>
       </ul>
       <h3>Completed</h3>
       <ul id="completed-tasks">
