--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li>
           <input type="checkbox"><label class="task">Pay Bills</label>
           <input type="text" class="task"><button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="delete"><img src="./remove.svg" alt="remove icon"></button>
         </li>
         <li class="edit-mode">
           <input type="checkbox"><label class="task">Go Shopping</label>
