--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <input type="checkbox"><label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
           <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="delete"><img src="./remove.svg" alt="remove icon"></button>
         </li>
       </ul>
       <h3>Completed</h3>
