--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
           <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="delete"><img src="./remove.svg" alt="remove icon"></button>
         </li>
       </ul>
     </div>
