fix: add class using  BEM according to the rule HTML&CSS Advanced level 2.1

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </ul>
       <h3>Completed</h3>
       <ul id="completed-tasks">
-        <li>
+        <li class="comleted-tasks__input_checked">
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
