--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
       <p id="add-item">
           <label for="new-task">Add Item</label>
           <div class="task-row-wrapper">
-            <input id="new-task"class="task" type="text"><button>Add</button>
+            <input id="new-task" class="task" type="text">
+            <button>Add</button>
           </div>
       </p>
       <h3>Todo</h3>
       <ul id="incomplete-tasks">
         <li>
           <input type="checkbox"><label class="task">Pay Bills</label>
-          <input type="text" class="task"><button class="edit">Edit</button>
+          <input type="text" class="task">
+          <button class="edit">Edit</button>
           <button class="delete"><img src="./remove.svg" alt="remove icon"></button>
         </li>
         <li class="edit-mode">
