--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<head><title>Todo App</title>
+<head>
+  <title>Todo App</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body>
   <header>
-    <div class="colorful-heading"><img src="./eisenhower-matrix.jpg"><a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></div>
+    <div class="colorful-heading">
+      <img src="./eisenhower-matrix.jpg">
+      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    </div>
   </header>
   <main>
     <div class="centered-main-page-element">
