--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <header>
     <div class="colorful-heading">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="colorfull grid image">
       <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
   </header>
