--- a/index.html
+++ b/index.html
@@ -23,13 +23,15 @@
       <h3>Todo</h3>
       <ul id="incomplete-tasks">
         <li>
-          <input type="checkbox"><label class="task">Pay Bills</label>
+          <input type="checkbox">
+          <label class="task">Pay Bills</label>
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete"><img src="./remove.svg" alt="remove icon"></button>
         </li>
         <li class="edit-mode">
-          <input type="checkbox"><label class="task">Go Shopping</label>
+          <input type="checkbox">
+          <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
           <button class="edit">Save</button>
           <button class="delete"><img src="./remove.svg" alt="remove icon"></button>
